--- a/index.html
+++ b/index.html
@@ -1,79 +1,68 @@
 <!DOCTYPE html>
 <html>
-
-	<head>
-	<meta charset="UTF-8">
+<head>
 	<title>Joshua Loudermilk's Bio</title>
-		
-		<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+	<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+</head>
 
-	</head>
-	
 <body>
 
-	<header style="background-color: #ffffff;">
+	<div class="header">
 
-		<selection id="navagationLinks">
+		<div class="contentWidth">
+			
+				<div class="nameHolderLeft">
 
-			<li style="padding-right: 40px;"><a href="./index.html">About</a></li>
-			<li style="padding-right: 40px;"><a href="./portfolio.html">Portfolio</a></li>
-			<li><a href="./contact.html">Contact</a></li>
+					<h1>Joshua Loudermilk</h1>
 
-		</selection>
+				</div>
 
-		<h1><selector id="nameHeader">Joshua Loudermilk</selector></h1>
+				<div class="navBarRight">
 
-	</header>
+					<a style="margin-right: 25px;" href="#">About</a>
 
-	<div class="socialContainer">
+					<a style="margin-right: 25px;" href="#">Portfolio</a>
 
-		<selection id="socialHeader">
+					<a href="#">Contact</a>	
 
-				<h3>Connect with Me</h3>
+				</div>
 
-		</selection>
-
-		<br>
-
-		<selection id="socialLinks">
-
-			<a href="https://github.com/jdloude"  target="_blank">
-				<img src="./assets/images/if_github_square_107105.png" alt="GitHub Account">
-			</a>
-
-			<a href="https://www.linkedin.com/in/joshua-loudermilk-6167186a/" target="_blank">
-				<img src="./assets/images/if_linkedin_square_color_107091.png" alt="LinkedIn Profile">
-			</a>
-
-			<a href="https://stackoverflow.com/users/story/8846829" target="_blank">
-				<img src="./assets/images/if_stackoverflow-square-social-media_764927.png" alt="Stackoverflow Profile">
-			</a>
-
-		</selection>
+		</div>
 
 	</div>
 
+	<div class="contentWidth">
 
-	<div id="bioContainer">
+		<div class="leftContainer">
+		
+			<div class="leftHeader">
 
-		<div id="bioHeader">
-
-			<h1>About Me</h1>
+				<h2>About Me</h2>
+			
+			</div>
 
 		</div>
 
-		<div class="content">
+		<div class="socialContainer">
+			
+			<div class="socialHeader">
 
-			<p>
-				Hi, Lorem ipsum dolor sit amet, pro ea numquam indoctum. In saperet postulant eos, ne exerci recusabo adversarium eum, eu vix aperiri electram comprehensam.<img src="https://placehold.it/200x200" style="float: left;"> Reformidans necessitatibus id sea, te feugait gubergren duo, sit consul petentium conceptam no. Sit ei diam maiorum volutpat, quo et unum congue iracundia. Eum duis meliore dissentiunt at. Hi, Lorem ipsum dolor sit amet, pro ea numquam indoctum. In saperet postulant eos, ne exerci recusabo adversarium eum, eu vix aperiri electram comprehensam. Reformidans necessitatibus id sea, te feugait gubergren duo, sit consul petentium conceptam no. Sit ei diam maiorum volutpat, quo et unum congue iracundia. Eum duis meliore dissentiunt at.
-			</p>
-			<p> Hi, Lorem ipsum dolor sit amet, pro ea numquam indoctum. In saperet postulant eos, ne exerci recusabo adversarium eum, eu vix aperiri electram comprehensam.<img src="https://placehold.it/200x200" style="float: right;"> Reformidans necessitatibus id sea, te feugait gubergren duo, sit consul petentium conceptam no. Sit ei diam maiorum volutpat, quo et unum congue iracundia. Eum duis meliore dissentiunt at. Hi, Lorem ipsum dolor sit amet, pro ea numquam indoctum. In saperet postulant eos, ne exerci recusabo adversarium eum, eu vix aperiri electram comprehensam. Reformidans necessitatibus id sea, te feugait gubergren duo, sit consul petentium conceptam no. Sit ei diam maiorum volutpat, quo et unum congue iracundia. Eum duis meliore dissentiunt at.</p>
+				<h3>Connect with Me</h3>
 
-				
+			</div>
+
+			<div class="socialLinks">
+
+				<a href="#" target="_blank"><img src="./assets/images/if_github_square_107105.png" alt="#"></a>
+				<a href="#" target="_blank"><img src="./assets/images/if_linkedin_square_color_107091.png" alt="#"></a>
+				<a href="#" target="_blank"><img src="./assets/images/if_stackoverflow-square-social-media_764927.png" alt="#"></a>
+
+			</div>
+
 		</div>
 
-	</div>	
+	</div>
+	<footer><strong>Copyright &copy; 2017 Joshua Loudermilk</strong></footer>
 
 </body>
-
 </html>
