--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 	<title>Joshua Loudermilk's Bio</title>
+
 	<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+
 </head>
 
 <body>
@@ -19,11 +21,11 @@
 
 				<div class="navBarRight">
 
-					<a style="margin-right: 25px;" href="#">About</a>
+					<a style="margin-right: 25px;" href="index.html">About</a>
 
-					<a style="margin-right: 25px;" href="#">Portfolio</a>
+					<a style="margin-right: 25px;" href="portfolio.html">Portfolio</a>
 
-					<a href="#">Contact</a>	
+					<a href="contact.html">Contact</a>	
 
 				</div>
 
@@ -53,16 +55,22 @@
 
 			<div class="socialLinks">
 
-				<a href="#" target="_blank"><img src="./assets/images/if_github_square_107105.png" alt="#"></a>
-				<a href="#" target="_blank"><img src="./assets/images/if_linkedin_square_color_107091.png" alt="#"></a>
-				<a href="#" target="_blank"><img src="./assets/images/if_stackoverflow-square-social-media_764927.png" alt="#"></a>
+				<a href="https://github.com/jdloude" target="_blank">
+						<img src="./assets/images/if_github_square_107105.png" alt="#"></a>
+
+				<a href="https://www.linkedin.com/in/joshua-loudermilk-6167186a/" target="_blank">
+						<img src="./assets/images/if_linkedin_square_color_107091.png" alt="#"></a>
+
+				<a href="https://stackoverflow.com/users/8846829/josh-loudermilk?tab=profile" target="_blank">
+						<img src="./assets/images/if_stackoverflow-square-social-media_764927.png" alt="#"></a>
 
 			</div>
 
 		</div>
 
 	</div>
-	<footer><strong>Copyright &copy; 2017 Joshua Loudermilk</strong></footer>
+
+	<footer>Copyright &copy; 2017 Joshua Loudermilk</footer>
 
 </body>
 </html>
