--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
 			
 			</div>
 
+			<div class="leftContent">
+
+				<p>This is just a little information about myself. I am from Okalhoma and I grew up in a small town outside of Tulsa called Bixby, Oklahoma. I spent my time helping my family start a software company as well as some other side projects in construction and philanthropy. Working hard has always been in my blood and I am excited to put that hard work to use in coding. I currently work in the marijuana industry as a lab manager for a Marijuana Infused Products company, otherwise known as a MIPS. My hobbies include: workinsg out, creating new things with my 3D printer, watching anime, doing anything active outdoors, and of course debugging applications.	
+				</p>
+				
+			</div>
+
 		</div>
 
 		<div class="socialContainer">
