--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Joshua Loudermilk's Bio</title>
 
+	<link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 
 </head>
@@ -43,6 +44,18 @@
 			
 			</div>
 
+			<div class="leftContent">
+
+				<img src="./assets/images/Photo_of_Josh.png" alt="Joshua Loudermilk" style="float: left; height: 200px; margin-right: 20px;">
+
+				<p style="margin: 10px;">This is just a little information about myself. I am from Oklahoma and I grew up in a small town outside of Tulsa called Bixby, Oklahoma. I spent my time helping my family start a software company as well as some other side projects in construction and philanthropy.
+				</p>
+
+				<p>Working hard has always been in my blood and I am excited to put that hard work to use in coding. I currently work in the marijuana industry as a lab manager for a Marijuana Infused Products company, otherwise known as a MIPS. My hobbies include: working out, creating new things with my 3D printer, watching anime, doing anything active outdoors, and of course debugging applications.	
+				</p>
+
+			</div>
+
 		</div>
 
 		<div class="socialContainer">
@@ -71,6 +84,7 @@
 	</div>
 
 	<footer>Copyright &copy; 2017 Joshua Loudermilk</footer>
+	
 
 </body>
 </html>
