--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Contact Me</title>
 
+	<link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 
 </head>
@@ -41,6 +42,28 @@
 
 				<h2>Contact Me</h2>
 			
+			</div>
+
+			<div class="leftContent">
+
+				<form action="mailto:jdloude@gmail.com">
+
+					First name: <br>
+
+					<input type="text" name="FirstName" style="width: 100%;"><br><br>
+	
+					Last name: <br>
+
+					<input type="text" name="LastName" style="width: 100%;"><br><br>
+
+					Message: <br>
+
+					<input type="text" name="Message" style="width: 100%; padding-bottom: 100px;"><br><br>
+
+					<input type="submit" value="Submit">
+
+				</form>
+
 			</div>
 
 		</div>
