--- a/portfolio.html
+++ b/portfolio.html
@@ -44,6 +44,17 @@
 			
 			</div>
 
+			<div class="leftContent">
+
+				<img class="portfolioImages" src="./assets/images/Portfolio_image_one.jpg" alt="Cool Pic One">
+				<img class="portfolioImages" src="./assets/images/Portfolio_image_two.jpg" alt="Cool Pic Two">
+				<img class="portfolioImages" src="./assets/images/Portfolio_image_three.jpg" alt="Cool Pic Three">
+				<img class="portfolioImages" src="./assets/images/Sauce.jpeg" alt="Cool Pic of Sauce We Made">
+				<img class="portfolioImages" src="./assets/images/OJGhost15.jpg" alt="Cool Pic of OJ Ghost">
+				<img class="portfolioImages" src="./assets/images/Portfolio_image_four.jpg" alt="Cool Pic of Somthing">
+
+			</div>
+
 		</div>
 
 		<div class="socialContainer">
